updated routes auth to /xxx with pesonal clarfications, will update back again later

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,2 +1,2 @@
-<h1>{{title}}</h1>
-<p>Welcome to {{title}}</p>
+<a id="home-button" href="/auth/xxx">Sign up</a> 
+{{!-- always href => route, not the view (we could have one route rendering multiple views) --}}
