it2 - added login routes and index href + MONGO_URL and NODE_ENV to .env file

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,2 +1,3 @@
 <a id="home-button" href="/auth/xxx">Sign up</a> 
 {{!-- always href => route, not the view (we could have one route rendering multiple views) --}}
+<a id="home-button" href="/auth/login">Log in</a> 
