fix signup from login page issue adds logout form

--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -6,7 +6,7 @@
   <label>Password</label>
   <input type="password" name="password" placeholder="*********" required="true"/>
   <button type="submit">Log in!</button>
-  <a href="/auth/signup">Not registered yet? Sign up!</a>
+  <a href="/auth/xxx">Not registered yet? Sign up!</a>
   {{#if error}}
     <p style="color: red">{{error}}</p>
   {{/if}}
