--- a/views/auth/profile.hbs
+++ b/views/auth/profile.hbs
@@ -1,2 +1,5 @@
 <h1>{{username}}'s profile</h1>
 <p>Email: {{email}}</p>
+<form action="/auth/logout" method="POST">
+  <button type="submit">Logout</button>
+</form>
