adds render profile after log in success, added middlewares (still some issues to navigate the app logged in

--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -1,5 +1,7 @@
 <h1>{{username}}'s profile</h1>
 <p>Email: {{email}}</p>
+<a href="/">Back Home</a>
+<a href="/profile/edit">Edit profile</a>
 <form action="/auth/logout" method="POST">
   <button type="submit">Logout</button>
 </form>
