--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,12 +7,22 @@
     <title>{{title}}</title>
     <link rel="stylesheet" href="/stylesheets/style.css" />
   </head>
-
   <body>
-
+    <nav>
+      <ul>
+        {{#if user}}
+          <li><a href="/">Home</a></li>
+          <li><a href="/auth/logout">Log out</a></li>
+          <li><a href="/auth/profile">Profile</a></li>
+          {{else}}    
+          <li><a href="/">Home</a></li>
+          <li><a href="/auth/signup">Sign up</a></li>
+          <li><a href="/auth/login">Log in</a></li>
+        {{/if}}
+      </ul>
+    </nav>
     {{{body}}}
-
-    <script src="/js/script.js"></script>
+  <script src="/js/script.js"></script>
   </body>
 
 </html>
