it3 - completed > adds fix to /profile from layout

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -13,10 +13,10 @@
         {{#if user}}
           <li><a href="/">Home</a></li>
           <li><a href="/auth/logout">Log out</a></li>
-          <li><a href="/auth/profile">Profile</a></li>
+          <li><a href="/profile">Profile</a></li>
           {{else}}    
           <li><a href="/">Home</a></li>
-          <li><a href="/auth/signup">Sign up</a></li>
+          <li><a href="/auth/xxx">Sign up</a></li>
           <li><a href="/auth/login">Log in</a></li>
         {{/if}}
       </ul>
