--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,3 +1,4 @@
+<p>Welcome {{#if user}}{{user.username}}{{/if}}</p>
 <a id="home-button" href="/auth/xxx">Sign up</a> 
 {{!-- always href => route, not the view (we could have one route rendering multiple views) --}}
 <a id="home-button" href="/auth/login">Log in</a> 
