adds fix to hide singup and login buttons when logged in

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,4 +1,7 @@
 <p>Welcome {{#if user}}{{user.username}}{{/if}}</p>
+{{#if user}}
+{{else}}  
 <a id="home-button" href="/auth/xxx">Sign up</a> 
 {{!-- always href => route, not the view (we could have one route rendering multiple views) --}}
 <a id="home-button" href="/auth/login">Log in</a> 
+{{/if}}
