adds fix to show all nav items when logged in by using user.username instead + users.js route to render {user}

--- a/views/editProfile.hbs
+++ b/views/editProfile.hbs
@@ -1,8 +1,8 @@
-<h1>Editing {{username}}'s profile</h1>
+<h1>Editing {{user.username}}'s profile</h1>
 
 <form method="POST" action="/profile/edit">
   <label>New username:</label>
-  <input type="text" name="username" required="true" value="{{username}}" />
+  <input type="text" name="username" required="true" value="{{user.username}}" />
   <button type="submit">Save changes</button>
   {{#if error}}
     <p style="color: red">{{error}}</p>
