--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -1,5 +1,5 @@
-<h1>{{username}}'s profile</h1>
-<p>Email: {{email}}</p>
+<h1>{{user.username}}'s profile</h1>
+<p>Email: {{user.email}}</p>
 <a href="/">Back Home</a>
 <a href="/profile/edit">Edit profile</a>
 <form action="/auth/logout" method="POST">
