--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -13,6 +13,7 @@
         {{#if user}}
           <li><a href="/">Home</a></li>
           <li><a href="/auth/logout">Log out</a></li>
+          <li>test</li>
           <li><a href="/profile">Profile</a></li>
           {{else}}    
           <li><a href="/">Home</a></li>
