--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -1,7 +1,6 @@
-<h1>{{user.username}}'s profile</h1>
-<p>Email: {{user.email}}</p>
-<a href="/">Back Home</a>
+<h1>{{user.username}}{{userInDB.username}}'s profile</h1>
+<p>Email: {{user.email}}{{userInDB.email}}</p>
 <a href="/profile/edit">Edit profile</a>
-<form action="/auth/logout" method="POST">
+<form action="/auth/logout" method="GET">
   <button type="submit">Logout</button>
 </form>
