fixed issue with signup redirect route to profile

--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -1,6 +1,6 @@
 <h2>Sign up</h2>
 
-<form method="POST" action="/auth/signup">
+<form method="POST" action="/auth/xxx">
   <label>Choose a username:</label>
   <input type="text" name="username" placeholder="John Doe" required="true" />
   <label>E-mail</label>
