--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -1,5 +1,5 @@
-<h1>{{user.username}}{{userInDB.username}}'s profile</h1>
-<p>Email: {{user.email}}{{userInDB.email}}</p>
+<h1>{{username}}{{user.username}}{{userInDB.username}}'s profile</h1>
+<p>Email: {{email}}{{user.email}}{{userInDB.email}}</p>
 <a href="/profile/edit">Edit profile</a>
 <form action="/auth/logout" method="GET">
   <button type="submit">Logout</button>
